Bug 169521 - Linkification in Input Line does not work (gtk3-only)
Summary: Linkification in Input Line does not work (gtk3-only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-11-18 16:26 UTC by Buovjaga
Modified: 2025-11-23 16:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2025-11-18 16:26:17 UTC
Use gtk3 UI in Calc.

1. Focus to Input Line and paste a URL
2. Hit Space

You will notice the link seemingly turns into a hyperlink object in the Input Line (not in the cell), but accepting the edit will result in the pasted text remaining plain.

The issue started in 7.4 with dc99d27f04b47c173de934a19b6d6a3cc572c20a
Resolves: tdf#145580 need to use gtk_im_context_filter_keypress

With that, we did not see a hyperlink being created transiently in Input Line.

The current state started in 7.6 with c43e39a7b7f4b0ed6165af966cce8057a93eb22f
tdf#155350 Do AutoCorrect of Input Method text
Comment 1 Gary Fraga 2025-11-20 10:25:25 UTC Comment hidden (spam)
Comment 2 Caolán McNamara 2025-11-22 21:52:54 UTC
Its the same general problem that there are two editengines and we try and keep them in sync with the input from one and we we forward simple keystroke as-is so they both do the same thing, while for IM events we don't and sync the contents so the other doesn't get the autocorrect logic applied.

The other direction, main document to formulabar in ScGridWindow::Command of sc/source/ui/view/gridwin.cxx does forward to both editengines so doesn't suffer.

I did try forwarding in this case in the past but ended up with a crash so that got reverted, but that is presumably the right direction, bug #155453 is related to this general issue too.

https://gerrit.libreoffice.org/c/core/+/194368 looks promising as a potential solution
Comment 3 Commit Notification 2025-11-23 14:35:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/470bde6e0cd94ac829ba08d9aa22a85cadcd4329

Resolves: tdf#169521 forward IM events like KeyEvents for inputbar

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2025-11-23 14:35:47 UTC
That seems to do the right thing
Comment 5 Buovjaga 2025-11-23 16:34:11 UTC
Verified, thanks.

Arch Linux 64-bit
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 470bde6e0cd94ac829ba08d9aa22a85cadcd4329
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 23 November 2025