Resolves: tdf#169521 forward IM events like KeyEvents for inputbar

which should also fix tdf#155453 formatting lost when formula bar edited via IM

Change-Id: Ifabc029808f54b123ca88f58b5d64e0afaf40392
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194368
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>